2016-12-31         [RELEASE] Release of databaseconnectionscanner 0.1.2 (Nicole Cordes)
2016-12-31 b522eec [TASK] Lower compatibility to TYPO3 7.6 (Nicole Cordes)

2016-12-22         [RELEASE] Release of databaseconnectionscanner 0.1.1 (Nicole Cordes)
2016-12-22 63c5c1f [TASK] Raise compatibility to TYPO3 8.5 (Nicole Cordes)

2016-09-01         [RELEASE] Release of databaseconnectionscanner 0.1.0 (Nicole Cordes)
2016-09-01 74973c8 [TASK] Add composer.json (Nicole Cordes)
2016-09-01 9b51ac0 [FEATURE] Add extension and file list (Nicole Cordes)
2016-09-01 314be47 [FEATURE] Add basic report skeleton (Nicole Cordes)
2016-08-31 39fc8bf [TASK] Add basic extension information (Nicole Cordes)
2016-08-31 30dc46d Initial commit (Nicole Cordes)