@@ -1,3 +1,13 @@
+2017-03-05         [RELEASE] Release of databaseconnectionscanner 0.1.3 (Nicole Cordes)
+2017-03-05 f6bf3e6 [TASK] Raise compatibility to TYPO3 8.6 (Nicole Cordes)
+2017-03-05 1b6a363 [TASK] Add dependency to typo3/cms-reports (Nicole Cordes)
+2017-03-05 fc68856 [TASK] Exclude databaseconnectionscanner itself from report (Nicole Cordes)
+2017-03-05 1ad808c [FEATURE] Add PHP lint for supported PHP versions (Nicole Cordes)
+2017-03-05 4e5afca [TASK] Fix coding style according to php-cs-fixer (Nicole Cordes)
+2017-03-05 c01122d [FEATURE] Add StyleCI Coding Style Service (Nicole Cordes)
+2017-03-05 fbcb561 [FEATURE] Add friendsofphp/php-cs-fixer as suggestion (Nicole Cordes)
+2017-03-05 352189a [TASK] Exclude local .php_cs files in .gitignore (Nicole Cordes)
+
 2016-12-31         [RELEASE] Release of databaseconnectionscanner 0.1.2 (Nicole Cordes)
 2016-12-31 b522eec [TASK] Lower compatibility to TYPO3 7.6 (Nicole Cordes)
 
